# cudi_rs

./: .gitignore  Cargo.toml  Readme.md  ToDo.md  chatgpt_example.rs
confs/: graphic.yaml  media.yaml
cudi/: Cargo.toml
cudi/src/: main.rs
data/objs/: indoor_plant_02.mtl  outside.mtl  s1.mtl  untitled.mtl
graphic_handler/: Cargo.toml
graphic_handler/shaders/: cc.fs  cudi.vs  default.fs  default.vs  engine.fs  engine.vs  framebuffer.fs
graphic_handler/src/: buffer_renderer.rs  controls.rs  event_handler.rs  gl_program.rs  graphic_config.rs  lib.rs  scene.rs
graphic_handler/src/gl_engine/: _light.rs  buffer_renderer.rs  buffer_util.rs  camera.rs  framebuffer_renderer.rs  gl_error.rs  gl_program.rs  light.rs  material.rs  mod.rs  model.rs  scene.rs  texture_util.rs
graphic_handler/src/gl_engine/lights/: basic_light.rs  directional_light.rs  mod.rs  point_light.rs  spot_light.rs
graphic_handler/src/gl_engine/textures/: cudi.rs  mod.rs  texture.rs  texture_util.rs
ia/: .gitignore
img_downloader/: Cargo.toml
img_downloader/src/: main.rs  media_config.rs  media_handler.rs
media_handler/: .env  Cargo.toml  DB.md
media_handler/migrations/2023-04-06-135720_create_db/: down.sql  up.sql
media_handler/src/: frame.rs  lib.rs  media_config.rs  media_handler.rs  media_source_api.rs  old_lib.rs  schema.rs  sql_models.rs
src/: main.rs  matrix_state.rs  shader.frag  shader.vert
toolbox/: image_corruption_bad_format.py  populate_db.py  requirements.txt
util_scripts/: detect_image_corruption.py
yaml_utils/: Cargo.toml
yaml_utils/src/: lib.rs
