# custom crates
[package]
name = "cudi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
media_handler = { path = "../media_handler" }
graphic_handler = { path = "../graphic_handler" }

clap = {version="4.1.4", features = ["derive"]}
