[package]
name = "media_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["postgres"] } 
dotenv = "0.15.0"
image = "0.24.6"
rand = "0.8.5"
yaml-rust = "0.4.5"
